src/test/ui/reachable/expr_type.stderr
error: unreachable expression
  --> $DIR/expr_type.rs:9:13
   |
LL |     let x = {return}: !;
   |             ^------^^^^
   |             ||
   |             |any code following this expression is unreachable
   |             unreachable expression
   |
note: the lint level is defined here
  --> $DIR/expr_type.rs:4:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: aborting due to previous error

